# Movie-TV-Show-Tracker

./: .env  README.md  pyproject.toml
src/: crud.py  database.py  main.py  misc.py  models.py  query_builder.py  routers.py  schemas.py  settings.py
src/api/: routers.py
src/api/endpoints/: login.py  movies.py  reviews.py  users.py
src/apps/: router.py
src/apps/v1/: route_login.py  route_movies.py
src/core/: security.py
src/crud/: crud_movies.py  crud_reviews.py  crud_users.py
src/models/: __init__.py  models_movies.py  movies.py  reviews.py  users.py
src/schemas/: __init__.py  movies.py  reviews.py  users.py
src/templates/components/: navbar.html
src/templates/movies/: detail.html  home.html
